# papr

./: .gitignore  CLAUDE.md  Cargo.toml  DEBUG.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: claude-code-review.yml  claude.yml  release.yml  update-tap.yml
crates/papr-cli/: Cargo.toml  README.md
crates/papr-cli/src/: main.rs  setup.rs  toon.rs
crates/papr-core/: Cargo.toml
crates/papr-core/resources/: feed-directory.json
crates/papr-core/src/: ai.rs  db.rs  error.rs  lib.rs  models.rs  opml.rs  sanitize.rs  sync.rs
crates/papr-core/src/ingestion/: discovery.rs  mod.rs  newsletter.rs  parse.rs  refresh.rs  sources.rs
docs/: cli.md
docs/superpowers/specs/: 2026-05-21-article-translation-design.md
extension/: README.md  manifest.json
extension/src/: content.js
skills/papr-rss/: SKILL.md
src/: App.tsx  api.ts  calStore.ts  listTranslation.ts  main.tsx  player.ts  store.ts  styles.css  translateLanguages.ts  translation.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: ai.rs  backing.rs  commands.rs  db.rs  export.rs  extraction.rs  lib.rs  models.rs  notify.rs  opml.rs  page_view.rs  sanitize.rs  scheduler.rs  share.rs  state.rs  sync.rs  translate.rs  translate_api.rs  translate_llm.rs  tray.rs
src-tauri/src/ingestion/: fetch.rs  newsletter.rs  parse.rs  scheduler.rs  sources.rs
src/components/: AddFeedDialog.tsx  ArticleList.tsx  CommandPalette.tsx  ContextMenu.tsx  DailyReport.tsx  ErrorBoundary.tsx  ExploreDialog.tsx  HighlightLayer.tsx  Icon.tsx  Lightbox.tsx  MobileShell.tsx  PlayerBar.tsx  PromptDialog.tsx  Reader.tsx  ResizeHandle.tsx  SendToMenu.tsx  SettingsDialog.tsx  Sidebar.tsx  TagPicker.tsx
src/hooks/: articleActions.ts  useFocusTrap.ts  useMenuKeyboard.ts
src/lib/: currentList.ts  download.ts  feedMeta.ts  highlightDom.ts  imageBytes.test.ts  imageBytes.ts  inputProps.ts  platform.test.ts  platform.ts  readingProgress.test.ts  readingProgress.ts  rowTranslation.test.ts  rowTranslation.ts  snippetNoise.test.ts  snippetNoise.ts  updater.ts  viewport.test.ts  viewport.ts
src/locales/: en.json  ja.json  zh.json
