[package]
name = "papr-cli"
version = "0.12.0-beta.1"
edition = "2021"
description = "papr — an agent-facing CLI over your Papr RSS feeds: read, search, triage and refresh from the shell."

[[bin]]
name = "papr"
path = "src/main.rs"

[dependencies]
papr-core = { path = "../papr-core" }
rusqlite.workspace = true
reqwest.workspace = true
tokio.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
toon-format.workspace = true
